📚 Auto-update: News data refreshed - 2026-01-05 23:11 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -40742,5 +40742,189 @@
         "published": "Mon, 05 Jan 2026 21:18:45 GMT",
         "source": "Latest news",
         "summary": "While most TVs in the lineup are getting upgrades, one model is losing an important feature."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/05/microsofts-nadella-wants-us-to-stop-thinking-of-ai-as-slop/",
+        "title": "Microsoft\u2019s Nadella wants us to stop thinking of AI as \u2018slop\u2019",
+        "link": "https://techcrunch.com/2026/01/05/microsofts-nadella-wants-us-to-stop-thinking-of-ai-as-slop/",
+        "published": "Mon, 05 Jan 2026 23:09:56 +0000",
+        "source": "TechCrunch",
+        "summary": "Nadella wants us to think of AI as a human helper instead of a slop-generating job killer. New data for 2026 indicates he could be right."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/05/this-is-ubers-new-robotaxi-from-lucid-and-nuro/",
+        "title": "This is Uber\u2019s new robotaxi from Lucid and Nuro",
+        "link": "https://techcrunch.com/2026/01/05/this-is-ubers-new-robotaxi-from-lucid-and-nuro/",
+        "published": "Mon, 05 Jan 2026 23:00:04 +0000",
+        "source": "TechCrunch",
+        "summary": "The production-intent version, unveiled at CES 2026 on Monday, will be an exceptionally roomy entry into the growing robotaxi market later this year."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/05/nvidia-wants-to-be-the-android-of-generalist-robotics/",
+        "title": "Nvidia wants to be the Android of generalist robotics",
+        "link": "https://techcrunch.com/2026/01/05/nvidia-wants-to-be-the-android-of-generalist-robotics/",
+        "published": "Mon, 05 Jan 2026 23:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Nvidia unveiled a full-stack robotics ecosystem at CES 2026, including foundation models, simulation tools, and hardware. It wants to be the default platform for robotics."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/05/nvidia-launches-powerful-new-rubin-chip-architecture/",
+        "title": "Nvidia launches powerful new Rubin chip architecture",
+        "link": "https://techcrunch.com/2026/01/05/nvidia-launches-powerful-new-rubin-chip-architecture/",
+        "published": "Mon, 05 Jan 2026 22:16:58 +0000",
+        "source": "TechCrunch",
+        "summary": "Nvidia CEO Jensen Huang officially launched the company\u2019s new Rubin computing architecture, which he described as the state of the art in AI computing."
+    },
+    {
+        "id": "https://www.theverge.com/news/850944/ces-2026-msi-crosshair-16-max",
+        "title": "The MSI Crosshair 16 Max HX features a slimmer chassis and stronger specs",
+        "link": "https://www.theverge.com/news/850944/ces-2026-msi-crosshair-16-max",
+        "published": "2026-01-05T18:01:00-05:00",
+        "source": "The Verge",
+        "summary": "The latest MSI Crosshair gaming laptop announced at CES today doesn't make any major changes, but does manage to fit improved specs into less space. According to MSI, the Crosshair 16 Max HX is 14.3 percent thinner than its predecessor, a difference of 2mm. The slightly more svelte chassis comes with slightly updated specs, including [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/845706/hyperx-qdoled-500hz-v-stripe-curved-specs",
+        "title": "HyperX\u2019s 2026 gaming monitor lineup includes a 500Hz QD-OLED",
+        "link": "https://www.theverge.com/tech/845706/hyperx-qdoled-500hz-v-stripe-curved-specs",
+        "published": "2026-01-05T18:00:00-05:00",
+        "source": "The Verge",
+        "summary": "From laptops to monitors, HyperX is the brand you'll see on much of HP's new gaming-focused products launched at CES 2026. And despite the branding switch, this year's slate of monitors might be the company's most competitive batch yet. The cheapest of the three QD-OLEDs announced is the HyperX Omen OLED 27q, a 27-inch 1440p [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/845774/hyperx-omen-15-16-max-specs",
+        "title": "HyperX\u2019s name is on HP\u2019s new Omen gaming laptops",
+        "link": "https://www.theverge.com/tech/845774/hyperx-omen-15-16-max-specs",
+        "published": "2026-01-05T18:00:00-05:00",
+        "source": "The Verge",
+        "summary": "HP's branding is missing on its new gaming laptops (and gaming monitors) announced at CES 2026 - HP-owned HyperX has gotten a big promotion in its place. This swap is the biggest aesthetic change in the Omen lineup (the logo is on the lid and on the screen's bottom bezel). In other words, not much [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/846558/hyperx-origins-2-gaming-wired-keyboard-customization-specs",
+        "title": "HyperX\u2019s new gaming keyboards were made to be yanked apart",
+        "link": "https://www.theverge.com/tech/846558/hyperx-origins-2-gaming-wired-keyboard-customization-specs",
+        "published": "2026-01-05T18:00:00-05:00",
+        "source": "The Verge",
+        "summary": "The next generation of HyperX's Origins wired keyboards debuted at CES 2026, and the company has focused on adding more performance and customization. For example, its new Origins 2 and Origins 2 Pro are both 65-percent options with high-profile keys that boast a PCB with hot-swappable switches that doesn't require soldering to tweak. The Origins [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/851047/dell-xps-14-16-13-laptops-brand-return-ces-2026",
+        "title": "Dell is eating humble pie and bringing back the XPS brand",
+        "link": "https://www.theverge.com/news/851047/dell-xps-14-16-13-laptops-brand-return-ces-2026",
+        "published": "2026-01-05T18:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Nearly one year ago to the day, Dell killed off its long-standing XPS brand name in favor of milquetoast Premium, Plus, Pro, and Pro Max monikers - but it's back for CES 2026. The new XPS 14 and XPS 16 laptops look to win back fans of the \"Extreme Performance System\" with Dell's thinnest designs [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/nvidias-rubin-chips-are-going-into-production/",
+        "title": "Jensen Huang Says Nvidia\u2019s New Vera Rubin Chips Are in \u2018Full Production\u2019",
+        "link": "https://www.wired.com/story/nvidias-rubin-chips-are-going-into-production/",
+        "published": "Mon, 05 Jan 2026 23:05:32 +0000",
+        "source": "WIRED",
+        "summary": "The chip giant says Vera Rubin will sharply cut the cost of training and running AI models, strengthening the appeal of its integrated computing platform."
+    },
+    {
+        "id": "https://arstechnica.com/space/2026/01/nasas-science-budget-wont-be-a-train-wreck-after-all/",
+        "title": "NASA\u2019s science budget won\u2019t be a train wreck after all",
+        "link": "https://arstechnica.com/space/2026/01/nasas-science-budget-wont-be-a-train-wreck-after-all/",
+        "published": "Mon, 05 Jan 2026 22:14:50 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "\"There's very little to not like in this.\""
+    },
+    {
+        "id": "https://arstechnica.com/health/2026/01/under-anti-vaccine-rfk-jr-cdc-slashes-childhood-vaccine-schedule/",
+        "title": "Under anti-vaccine RFK Jr., CDC slashes childhood vaccine schedule",
+        "link": "https://arstechnica.com/health/2026/01/under-anti-vaccine-rfk-jr-cdc-slashes-childhood-vaccine-schedule/",
+        "published": "Mon, 05 Jan 2026 21:57:07 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "The changes are modeled after a small country with universal health care."
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2026/01/data-broker-hoarding-is-rampant-new-law-lets-consumers-fight-back/",
+        "title": "The nation\u2019s strictest privacy law just took effect, to data brokers\u2019 chagrin",
+        "link": "https://arstechnica.com/tech-policy/2026/01/data-broker-hoarding-is-rampant-new-law-lets-consumers-fight-back/",
+        "published": "Mon, 05 Jan 2026 21:42:14 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Californians can now submit demands requiring 500 brokers to delete their data."
+    },
+    {
+        "id": "https://www.engadget.com/computing/amd-at-ces-2026-live-updates-from-ceo-lisa-sus-keynote-presentation-190012370.html?src=rss",
+        "title": "AMD at CES 2026: Live updates from CEO Lisa Su's keynote presentation",
+        "link": "https://www.engadget.com/computing/amd-at-ces-2026-live-updates-from-ceo-lisa-sus-keynote-presentation-190012370.html?src=rss",
+        "published": "Mon, 05 Jan 2026 23:01:25 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>NVIDIA and Intel had their moment in the spotlight, and now it's AMD's turn. The chipmaker is kicking off<a href=\"https://www.engadget.com/big-tech/ces-2026-what-to-expect-when-techs-biggest-conference-starts-on-january-4-120000189.html\"> CES 2026</a> on Monday night, where it'll cover its latest AI developments and perhaps show off its newest Ryzen chips. It's the <a href=\"https://www.prnewswire.com/in/news-releases/dr-lisa-su-chair-and-ceo-of-amd-to-keynote-ces-2026-on-how-ai-is-changing-th"
+    },
+    {
+        "id": "https://www.engadget.com/transportation/uber-reveals-the-design-of-its-robotaxi-at-ces-2026-230056302.html?src=rss",
+        "title": "Uber reveals the design of its robotaxi at CES 2026",
+        "link": "https://www.engadget.com/transportation/uber-reveals-the-design-of-its-robotaxi-at-ces-2026-230056302.html?src=rss",
+        "published": "Mon, 05 Jan 2026 23:00:56 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Waymo is getting a good look at the competition as Uber revealed the design of its <a class=\"no-affiliate-link\" href=\"https://www.engadget.com/transportation/uber-and-lucids-robotaxis-will-debut-in-the-bay-area-in-2026-120000876.html\">robotaxi</a> that's due to launch in San Francisco later this year. The upcoming robotaxi is a result of a <a class=\"no-affiliate-link\" href=\"https://investor.uber.com/news-events/news/press-release-details/2025/Lucid-Nuro-and-Uber-Partner-on-Next-Generation-Aut"
+    },
+    {
+        "id": "https://www.engadget.com/computing/laptops/acers-predator-helios-neo-16s-ai-laptop-can-be-outfitted-with-intels-new-core-ultra-9-386h-cpu-230048825.html?src=rss",
+        "title": "Acer's Predator Helios Neo 16S AI laptop can be outfitted with Intel's new Core Ultra 9 386H CPU",
+        "link": "https://www.engadget.com/computing/laptops/acers-predator-helios-neo-16s-ai-laptop-can-be-outfitted-with-intels-new-core-ultra-9-386h-cpu-230048825.html?src=rss",
+        "published": "Mon, 05 Jan 2026 23:00:48 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Acer just announced the Predator Helios 16S AI gaming laptop at <a href=\"https://www.engadget.com/big-tech/ces-2026-what-to-expect-from-techs-biggest-conference-in-january-120000369.html\"><ins>CES 2026</ins></a>. This computer is filled with both bells and whistles, making it a decent choice for modern gamers.</p>\n<p>To that end, the laptop can be equipped with up to an Intel Core Ultra 9 386H processor. This is Intel's upcoming flagship mobile processor that has <a href=\"https://www.tweaktow"
+    },
+    {
+        "id": "https://www.engadget.com/computing/laptops/samsungs-galaxy-book-6-series-ces-2026-intel-panther-lake-230010324.html?src=rss",
+        "title": "Samsung\u2019s Galaxy Book 6 series launches at CES with Intel\u2019s newest chips and a refined design",
+        "link": "https://www.engadget.com/computing/laptops/samsungs-galaxy-book-6-series-ces-2026-intel-panther-lake-230010324.html?src=rss",
+        "published": "Mon, 05 Jan 2026 23:00:10 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>In addition to <a href=\"https://www.engadget.com/home/home-theater/samsung-brought-an-absolute-beast-of-a-130-inch-micro-rgb-tv-to-ces-2026-060245387.html\">huge TVs</a>, <a href=\"https://www.engadget.com/home/home-theater/samsung-freestyle-plus-projector-hands-on-ces-2026-060840386.html\">compact projectors</a>, <a href=\"https://www.engadget.com/mobile/smartphones/samsung-fully-unveils-its-galaxy-z-trifold-phone-and-itll-be-available-in-korea-in-a-few-days-010000499.html\">Trifolds</a> and more"
+    },
+    {
+        "id": "https://www.engadget.com/computing/laptops/msi-unveils-new-gaming-and-prestige-business-laptops-at-ces-2026-230000027.html?src=rss",
+        "title": "MSI unveils new gaming and Prestige business laptops at CES 2026",
+        "link": "https://www.engadget.com/computing/laptops/msi-unveils-new-gaming-and-prestige-business-laptops-at-ces-2026-230000027.html?src=rss",
+        "published": "Mon, 05 Jan 2026 23:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>MSI has presented its refreshed <a class=\"link\" href=\"https://www.engadget.com/2018-06-05-msi-prestige-ps42-business-laptop.html\" target=\"_blank\">Prestige</a> lineup of business laptops, as well as its next-generation Raider, Stealth and Crosshair gaming models at this year\u2019s CES. The Raider 16 Max HX is a 300w laptop, which the company says its its most powerful gaming model yet. It can supply 175w to its GeForce RTX 5090 or RTX 5080 GPU, while feeding 125w to its Intel Core Ultra 200HX proc"
+    },
+    {
+        "id": "https://perishablepress.com/google-broke-my-heart/",
+        "title": "Google broke my heart",
+        "link": "https://perishablepress.com/google-broke-my-heart/",
+        "published": "Mon, 05 Jan 2026 21:52:22 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46505518\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/msi-prestige-modern-laptops-ces/",
+        "title": "MSI's new thin and light laptops are one of the most pleasant surprises at CES",
+        "link": "https://www.zdnet.com/article/msi-prestige-modern-laptops-ces/",
+        "published": "Mon, 05 Jan 2026 23:01:00 GMT",
+        "source": "Latest news",
+        "summary": "MSI's Prestige and Modern series laptops have standard OLED displays and Intel \"Panther Lake\" chips."
+    },
+    {
+        "id": "https://www.zdnet.com/article/acer-swift-16-ai-laptop-big-trackpad-ces-2026/",
+        "title": "One of my favorite laptops from last year got a redesign I didn't see coming",
+        "link": "https://www.zdnet.com/article/acer-swift-16-ai-laptop-big-trackpad-ces-2026/",
+        "published": "Mon, 05 Jan 2026 23:00:59 GMT",
+        "source": "Latest news",
+        "summary": "Acer's Swift 16 AI earned our Editor's Choice award last year, but its 2026 refresh has me scratching my head."
+    },
+    {
+        "id": "https://www.zdnet.com/article/dell-xps-returns-ces-2026/",
+        "title": "The Dell XPS makes a triumphant return at CES 2026, and it looks better than ever",
+        "link": "https://www.zdnet.com/article/dell-xps-returns-ces-2026/",
+        "published": "Mon, 05 Jan 2026 23:00:58 GMT",
+        "source": "Latest news",
+        "summary": "Dell is walking back its branding changes with the \"Pro\" and \"Premium\" monikers, returning the XPS name to its flagship position."
+    },
+    {
+        "id": "https://www.zdnet.com/article/nvidia-physical-ai-models-robotics-ces/",
+        "title": "Nvidia's physical AI models clear the way for next-gen robots - here's what's new",
+        "link": "https://www.zdnet.com/article/nvidia-physical-ai-models-robotics-ces/",
+        "published": "Mon, 05 Jan 2026 22:55:53 GMT",
+        "source": "Latest news",
+        "summary": "At CES, robotics leaders debut the latest robots and autonomous machines built with Nvidia technologies."
     }
 ]
