📚 Auto-update: News data refreshed - 2026-01-06 00:53 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -40926,5 +40926,181 @@
         "published": "Mon, 05 Jan 2026 22:55:53 GMT",
         "source": "Latest news",
         "summary": "At CES, robotics leaders debut the latest robots and autonomous machines built with Nvidia technologies."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/05/insight-partners-sued-by-former-vice-president-kate-lowry/",
+        "title": "Insight Partners sued by former vice president Kate Lowry",
+        "link": "https://techcrunch.com/2026/01/05/insight-partners-sued-by-former-vice-president-kate-lowry/",
+        "published": "Mon, 05 Jan 2026 23:30:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Insight Partners sued by former vice president Kate Lowry."
+    },
+    {
+        "id": "https://www.theverge.com/tech/855884/garmin-connect-nutrition-tracking",
+        "title": "Garmin now offers nutrition tracking",
+        "link": "https://www.theverge.com/tech/855884/garmin-connect-nutrition-tracking",
+        "published": "2026-01-05T19:39:21-05:00",
+        "source": "The Verge",
+        "summary": "Garmin announced that it's adding nutrition tracking to the Garmin Connect app as a perk for users with a Garmin Connect Plus subscription. The feature lets users \"track their calories and macros (proteins, fats and carbs) and receive Active Intelligence insights to help them achieve their nutrition goals,\" according to Garmin. To log foods, you [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/848256/asus-rog-xreal-r1-smart-glasses-specs-release-date",
+        "title": "Asus ROG\u2019s next ally is Xreal, with 240Hz AR glasses coming in 2026",
+        "link": "https://www.theverge.com/tech/848256/asus-rog-xreal-r1-smart-glasses-specs-release-date",
+        "published": "2026-01-05T19:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Xreal is having a big CES. It announced its new 1S AR glasses and the Switch 2-ready Neo dock that's also a battery - both of which are already available to buy. It's not done with the announcements yet, as it delivered a peek at an upcoming partnership with Asus that will yield a new [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/851827/asus-rog-zephyrus-duo-dual-screen-gaming-laptop-ces-2026",
+        "title": "Asus finally gives its ROG Zephyrus Duo gaming laptop the true dual screens it deserves",
+        "link": "https://www.theverge.com/news/851827/asus-rog-zephyrus-duo-dual-screen-gaming-laptop-ces-2026",
+        "published": "2026-01-05T19:00:00-05:00",
+        "source": "The Verge",
+        "summary": "The Asus ROG Zephyrus Duo is back, but for CES 2026 both its screens are going full edge-to-edge - like a Zenbook Duo built for gaming. The original Zephyrus Duo was a quirky keyboard-in-the-front-club member, with a 15.6-inch main display and a 14.1-inch-wide, skinny touchscreen crammed between the hinge and side-by-side keyboard and trackpad. The [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/851853/this-limited-edition-tablet-is-the-closest-you-can-get-to-using-hideo-kojimas-computer",
+        "title": "This limited-edition tablet is the closest you can get to using Hideo Kojima\u2019s computer",
+        "link": "https://www.theverge.com/news/851853/this-limited-edition-tablet-is-the-closest-you-can-get-to-using-hideo-kojimas-computer",
+        "published": "2026-01-05T19:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Asus is no stranger to odd yet badass limited editions of its one-of-a-kind gaming tablet, and for CES 2026 it's collaborating with Kojima Productions on the best-looking one yet. The Asus ROG Flow Z13 x Kojima Productions edition takes last year's excellent AMD Strix Halo-equipped gaming tablet and dresses it up in a Yoji Shinkawa [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/853777/ecovacs-deebot-x12-omnicyclone-robot-vacuum-mop-cover",
+        "title": "Ecovacs adds a mop cover to its flagship robot vacuum",
+        "link": "https://www.theverge.com/tech/853777/ecovacs-deebot-x12-omnicyclone-robot-vacuum-mop-cover",
+        "published": "2026-01-05T19:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Ecovacs launched the second generation of its top-of-the-line robot vacuum and mop at CES 2026 this week. The Deebot X12 OmniCyclone is the follow-up to the $1,500 X11, which launched at IFA in September 2025. Yes, just three months ago. The X12 keeps the same overall design of the X11, including the handy bagless dust [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/home/smart-home/this-tabletop-sleep-device-and-sunrise-alarm-clock-aims-to-help-you-put-your-phone-away-before-bed-004751464.html?src=rss",
+        "title": "This tabletop sleep device and sunrise alarm clock aims to help you put your phone away before bed",
+        "link": "https://www.engadget.com/home/smart-home/this-tabletop-sleep-device-and-sunrise-alarm-clock-aims-to-help-you-put-your-phone-away-before-bed-004751464.html?src=rss",
+        "published": "Tue, 06 Jan 2026 00:47:51 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>\"Relaxing\" isn't a word anyone is likely to associate with CES. If anything, it is the antithesis of CES, an exhausting and wildly overstimulating marathon event that takes place in the already exhausting and wildly overstimulating Las Vegas. But a demo of Ambient's bedside device, Dreamie, ahead of its appearance at CES-adjacent Pepcom had me properly lulled and ready to go right back to bed. Dreamie is a smart sunrise alarm clock and nighttime wind-down device that has a built-in podcast pl"
+    },
+    {
+        "id": "https://www.engadget.com/computing/laptops/dell-revives-its-xps-laptops-after-a-boneheaded-rebranding-001028029.html?src=rss",
+        "title": "Dell revives its XPS laptops after a boneheaded rebranding",
+        "link": "https://www.engadget.com/computing/laptops/dell-revives-its-xps-laptops-after-a-boneheaded-rebranding-001028029.html?src=rss",
+        "published": "Tue, 06 Jan 2026 00:10:28 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Last year, <a class=\"link\" href=\"https://www.engadget.com/computing/dell-dumps-its-pc-brands-to-be-more-like-apple-194524781.html\" target=\"_blank\">Dell killed off all of its PC brands</a>, including the iconic XPS lineup, and replaced them with a simplified naming scheme. It was a move meant to make it easier for people to discern between the company's many brands, but in reality, it just just made the company's lineup even more confusing. We called it an unforced error at the time, but after"
+    },
+    {
+        "id": "https://www.engadget.com/computing/ces-2026-intel-hopes-its-core-ultra-series-3-chips-are-the-start-of-a-comeback-000155611.html?src=rss",
+        "title": "CES 2026: Intel hopes its Core Ultra Series 3 chips are the start of a comeback",
+        "link": "https://www.engadget.com/computing/ces-2026-intel-hopes-its-core-ultra-series-3-chips-are-the-start-of-a-comeback-000155611.html?src=rss",
+        "published": "Tue, 06 Jan 2026 00:01:55 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p><a class=\"link\" href=\"https://www.intc.com/news-events/press-releases/detail/1757/ces-2026-intel-core-ultra-series-3-debuts-as-first-built\" target=\"_blank\">Intel</a> turned up to CES 2026 <a class=\"link\" href=\"https://www.engadget.com/computing/intel-at-ces-2026-live-updates-from-the-core-ultra-series-3-panther-lake-launch-event-130040881.html\" target=\"_blank\">to herald the birth of the Core Ultra Series 3,</a> a new range of chips offering \u201cexceptional performance.\u201d It says the mobile proces"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/pc/ces-asus-made-a-special-hideo-kojima-version-of-the-rog-flow-z13-000000768.html?src=rss",
+        "title": "CES: ASUS made a special Hideo Kojima version of the ROG Flow Z13",
+        "link": "https://www.engadget.com/gaming/pc/ces-asus-made-a-special-hideo-kojima-version-of-the-rog-flow-z13-000000768.html?src=rss",
+        "published": "Tue, 06 Jan 2026 00:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Who among us hasn't looked at the <a class=\"link\" href=\"https://www.engadget.com/computing/laptops/the-asus-rog-flow-z13-is-starting-to-make-more-sense-as-a-gaming-tablet-043027074.html\" target=\"_blank\">ASUS ROG Flow Z13</a> and said, &quot;That's great and all, but what if it had more Hideo Kojima?&quot; Well, our cries have been heard. Behold, the ROG Flow Z13-KJP, a collaboration between ASUS and Kojima Productions.</p><p>On the inside, this model is no different than the standard version "
+    },
+    {
+        "id": "https://www.engadget.com/computing/laptops/the-asus-rog-zephyrus-duo-is-big-weird-and-kind-of-awesome-000000156.html?src=rss",
+        "title": "The ASUS ROG Zephyrus Duo is big, weird and kind of awesome",
+        "link": "https://www.engadget.com/computing/laptops/the-asus-rog-zephyrus-duo-is-big-weird-and-kind-of-awesome-000000156.html?src=rss",
+        "published": "Tue, 06 Jan 2026 00:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p></p><p>A couple years ago ASUS made its first dual-screen laptop in the <a class=\"link\" href=\"https://www.engadget.com/asus-zenbook-duo-review-specs-price-the-first-dual-screen-laptop-worth-buying-130016756.html\" target=\"_blank\">ZenBook Duo</a>. Now at CES 2026, the company has taken that idea and branched off in a somewhat unexpected way with the ROG Zephyrus Duo, which might just be the world\u2019s first true dual-screen gaming laptop.</p><p>Unlike a more traditional productivity notebook with "
+    },
+    {
+        "id": "https://www.donutlab.com/ces-battery-announcement/",
+        "title": "Worlds's first all-solid-state battery ready to power up production vehicles now",
+        "link": "https://www.donutlab.com/ces-battery-announcement/",
+        "published": "Mon, 05 Jan 2026 22:28:46 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46505975\">Comments</a>"
+    },
+    {
+        "id": "https://www.koreaherald.com/article/10648326",
+        "title": "Six-decade math puzzle solved by Korean mathematician",
+        "link": "https://www.koreaherald.com/article/10648326",
+        "published": "Sun, 04 Jan 2026 19:10:31 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46491129\">Comments</a>"
+    },
+    {
+        "id": "https://www.djmurphy.net/blog/clo-gaelach/",
+        "title": "Adding insular script like it's 1626",
+        "link": "https://www.djmurphy.net/blog/clo-gaelach/",
+        "published": "Sun, 04 Jan 2026 15:31:07 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46488883\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/nvidia-rubin-ai-ces-2026/",
+        "title": "Why Nvidia's new Rubin platform could change the future of AI computing forever",
+        "link": "https://www.zdnet.com/article/nvidia-rubin-ai-ces-2026/",
+        "published": "Tue, 06 Jan 2026 00:17:16 GMT",
+        "source": "Latest news",
+        "summary": "At CES 2026, Nvidia unveiled Rubin, a new AI supercomputing platform that aims to accelerate the adoption of LLMs among the public."
+    },
+    {
+        "id": "https://www.zdnet.com/article/i-just-saw-one-of-the-coolest-smart-locks-in-action-at-ces/",
+        "title": "I just saw one of the coolest new smart locks in action at CES",
+        "link": "https://www.zdnet.com/article/i-just-saw-one-of-the-coolest-smart-locks-in-action-at-ces/",
+        "published": "Mon, 05 Jan 2026 23:54:22 GMT",
+        "source": "Latest news",
+        "summary": "Your next smart lock might just recognize you and let you in."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/information-tech/wipro-now-mandates-six-hours-wfo-in-hybrid-work-tweak/articleshow/126357045.cms",
+        "title": "Wipro now mandates six hours WFO in hybrid work tweak",
+        "link": "https://economictimes.indiatimes.com/tech/information-tech/wipro-now-mandates-six-hours-wfo-in-hybrid-work-tweak/articleshow/126357045.cms",
+        "published": "Tue, 06 Jan 2026 06:01:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Software exporter Wipro has tightened its work-from-office policy, mandating employees to stay at least six hours in office for three days a week, in a shift from the earlier flexible hours. While weekly three days of attendance at the office has been in place for some time, the six hours of stay between two in and out punches is among the additions to Wipro\u2019s hybrid work policy in India."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/ai-your-new-year-resolution-coach/articleshow/126360479.cms",
+        "title": "AI: Your new year resolution coach",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/ai-your-new-year-resolution-coach/articleshow/126360479.cms",
+        "published": "Tue, 06 Jan 2026 06:00:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Winning With AI: A fortnightly column on the tips and tricks that will help propel you ahead in the AI race."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/information-tech/modest-q3-awaits-it-big-caps-as-weak-demand-curbs-momentum/articleshow/126359986.cms",
+        "title": "Modest Q3 awaits IT big caps as weak demand curbs momentum",
+        "link": "https://economictimes.indiatimes.com/tech/information-tech/modest-q3-awaits-it-big-caps-as-weak-demand-curbs-momentum/articleshow/126359986.cms",
+        "published": "Tue, 06 Jan 2026 06:00:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Large-cap companies, such as Tata Consultancy Services, Infosys, HCLTech, Wipro and Tech Mahindra, are estimated to report revenue growth of up to 2.3% in constant currency terms sequentially in Q3FY26. The muted quarter comes as furloughs and continued macro uncertainty keep near-term revenue traction subdued."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/esops-tax-pause-may-be-opened-to-more-startups/articleshow/126359977.cms",
+        "title": "Esops tax pause may be opened to more startups",
+        "link": "https://economictimes.indiatimes.com/tech/startups/esops-tax-pause-may-be-opened-to-more-startups/articleshow/126359977.cms",
+        "published": "Tue, 06 Jan 2026 06:00:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The Centre is considering widening the four-year Esop tax deferral to cover all DPIIT-recognised startups, significantly expanding a benefit that currently applies to around 4,000 firms approved by an inter-ministerial board. Extending the deferral would ease cash flow pressure on employees and make stock-based compensation more viable as more startups scale, restructure, and prepare for IPOs."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/startups-jump-onto-souped-up-ipo-bandwagon-may-pick-up-rs-50000-crore-from-public-markets-in-2026/articleshow/126359894.cms",
+        "title": "Startups jump onto souped-up IPO bandwagon; may pick up Rs 50,000 crore from public markets in 2026",
+        "link": "https://economictimes.indiatimes.com/tech/startups/startups-jump-onto-souped-up-ipo-bandwagon-may-pick-up-rs-50000-crore-from-public-markets-in-2026/articleshow/126359894.cms",
+        "published": "Tue, 06 Jan 2026 06:00:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "India\u2019s new-age IPO pipeline for 2026 is already taking shape, with a crowded slate of consumer internet and tech companies lining up for the public markets. PhonePe, Zepto, Oyo, Boat, Infra.Market, Shadowfax and others are collectively targeting close to Rs 50,000 crore through a mix of fresh issues and secondary sales."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/funding-even-healthcare-20-m-early-break-even-bengaluru-hospital",
+        "title": "Even Healthcare raises $20M, claims early break-even at first Bengaluru hospital",
+        "link": "https://yourstory.com/2026/01/funding-even-healthcare-20-m-early-break-even-bengaluru-hospital",
+        "published": "Tue, 06 Jan 2026 00:30:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The funding will be used to scale Even\u2019s hospitals in Bengaluru, where it launched its first facility in May 2025, marking a shift from a membership-led healthcare platform to a vertically integrated provider combining outpatient care, diagnostics and hospitalisation."
     }
 ]
